Cleaning the new API code